--- a/ColorNumber/Models/LibraryModels/Library.plist
+++ b/ColorNumber/Models/LibraryModels/Library.plist
@@ -13,13 +13,14 @@
 			<string>Trending Pictures</string>
 			<key>listImage</key>
 			<array>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
+				<string>Trending_1</string>
+				<string>Trending_2</string>
+				<string>Trending_3</string>
+				<string>Trending_4</string>
+				<string>Trending_5</string>
+				<string>Trending_6</string>
+				<string>Trending_7</string>
+				<string>Trending_8</string>
 			</array>
 		</dict>
 		<dict>
@@ -31,13 +32,16 @@
 			<string>Holiday</string>
 			<key>listImage</key>
 			<array>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
+				<string>Holiday_1</string>
+				<string>Holiday_2</string>
+				<string>Holiday_3</string>
+				<string>Holiday_4</string>
+				<string>Holiday_5</string>
+				<string>Holiday_6</string>
+				<string>Holiday_7</string>
+				<string>Holiday_8</string>
+				<string>Holiday_9</string>
+				<string>Holiday_10</string>
 			</array>
 		</dict>
 		<dict>
@@ -49,13 +53,13 @@
 			<string>People</string>
 			<key>listImage</key>
 			<array>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
+				<string>People_1</string>
+				<string>People_2</string>
+				<string>People_3</string>
+				<string>People_4</string>
+				<string>People_5</string>
+				<string>People_6</string>
+				<string>People_7</string>
 			</array>
 		</dict>
 		<dict>
@@ -67,13 +71,16 @@
 			<string>Food</string>
 			<key>listImage</key>
 			<array>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
-				<string>default</string>
+				<string>Food_1</string>
+				<string>Food_2</string>
+				<string>Food_3</string>
+				<string>Food_4</string>
+				<string>Food_5</string>
+				<string>Food_6</string>
+				<string>Food_7</string>
+				<string>Food_8</string>
+				<string>Food_9</string>
+				<string>Food_10</string>
 			</array>
 		</dict>
 	</array>
