--- a/ColorNumber/Info.plist
+++ b/ColorNumber/Info.plist
@@ -43,5 +43,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Use camera to create Image</string>
 </dict>
 </plist>
