--- a/ColorNumber/Models/LibraryModels/Library.plist
+++ b/ColorNumber/Models/LibraryModels/Library.plist
@@ -21,6 +21,7 @@
 				<string>Trending_6</string>
 				<string>Trending_7</string>
 				<string>Trending_8</string>
+				<string>Food_11</string>
 			</array>
 		</dict>
 		<dict>
